kubernetes/taktzeit-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taktzeit
  labels:
    name: taktzeit
