kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: taktzeit
  labels:
    app: api
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
        app: api
        version: 1.0.0
    spec:
      containers:
      - name: api
        image: index.docker.io/edaddario/api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5010
        resources:
          limits:
            memory: 96Mi
            cpu: 250m
          requests:
            memory: 64Mi
            cpu: 10m
