kubernetes/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: web
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
        app: web
        version: 1.0.0
    spec:
      containers:
      - name: client
        image: edaddario/client
        ports:
        - containerPort: 3010
        resources:
          limits:
            memory: "32Mi"
