kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: taktzeit
  labels:
    app: database
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
        app: database
        version: 1.0.0
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
        - name: postgres
          image: index.docker.io/postgres:16.3-alpine3.20
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            limits:
              memory: 96Mi
              cpu: 750m
            requests:
              memory: 64Mi
              cpu: 75m
