kubernetes/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: msg
  template:
    metadata:
      labels:
        component: msg
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:alpine
        ports:
        - containerPort: 5672
        resources:
          limits:
            memory: "256Mi"
