kubernetes/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: cache
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cache
  template:
    metadata:
      labels:
        component: cache
        app: cache
        version: 1.0.0
    spec:
      containers:
        - name: redis
          image: redis:7.2.5-alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: "12Mi"
