kubernetes/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: taktzeit
  labels:
    app: worker
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
        app: worker
        version: 1.0.0
    spec:
      containers:
      - name: worker
        image: index.docker.io/edaddario/worker:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 56Mi
            cpu: 500m
          requests:
            memory: 40Mi
            cpu: 50m
