kubernetes/api-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
  labels:
    app: api
    version: 1.0.0
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
  - port: 5010
    name: http
    targetPort: 5010
