kubernetes/client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
  labels:
    app: client
    version: 1.0.0
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 3010
    targetPort: 3010
