kubernetes/erised-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: erised-cluster-ip
  namespace: taktzeit
  labels:
    app: erised
    version: 1.0.0
spec:
  type: ClusterIP
  selector:
    component: erised
  ports:
    - port: 4010
      name: http
      targetPort: 8080
