kubernetes/rabbitmq-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: msg
  ports:
  - port: 5672
    targetPort: 5672
