kubernetes/redis-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: cache
  ports:
  - port: 6379
    targetPort: 6379
