kubernetes/aks-agic-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taktzeit-ingress-service-rules
  namespace: taktzeit
  annotations:
    appgw.ingress.kubernetes.io/backend-hostname: "taktzeit.io"
spec:
  ingressClassName: azure-application-gateway
  defaultBackend:
    service:
      name: client-cluster-ip
      port:
        number: 3010
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3010
          - path: /echo/
            pathType: ImplementationSpecific
            backend:
              service:
                name: erised-cluster-ip
                port:
                  number: 4010
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-cluster-ip
                port:
                  number: 5010
