kubernetes/aks-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: taktzeit
  labels:
    app: ingress
    version: 1.0.0
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  defaultBackend:
    service:
      name: client-cluster-ip
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3010
            pathType: ImplementationSpecific
          - path: /echo/?(.*)
            backend:
              service:
                name: erised-cluster-ip
                port:
                  number: 4010
            pathType: ImplementationSpecific
          - path: /api/?(.*)
            backend:
              service:
                name: api-cluster-ip
                port:
                  number: 5010
            pathType: ImplementationSpecific
