kubernetes/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  namespace: taktzeit
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: taktzeit
  labels:
    app: ingress
    version: 1.0.0
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: client-cluster-ip
      port:
        number: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /?(.*)
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3010
            pathType: ImplementationSpecific
          - path: /api/?(.*)
            backend:
              service:
                name: api-cluster-ip
                port:
                  number: 5010
            pathType: ImplementationSpecific
